[package]
name = "agg-ws-term"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
better-panic = "0.3.0"
crossterm = { version = "0.26.1", features = ["event-stream"] }
ratatui = "0.21.0"
unicode-width = "0.1.10"
tokio = { version = "1", features = ["full"] }
futures = "0.3.28"
agg-ws = { path = "../agg-ws"}
chrono = "0.4.26"
tracing = "0.1"
tracing-subscriber = "0.3"
rust_decimal = "1.29.1"
rust_decimal_macros = "1.29.1"
